--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         }
     </script>
     </section>
-    <section class="inner-section" style="width: 400px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) ; border-radius: 8px; overflow: hidden; margin-left: 30px; margin-top: 20px; margin-bottom: 20PX; ">
+    <section class="inner-section" style="width: 400px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) ; border-radius: 8px; overflow: hidden; margin-left: 30px; margin-top: 20px; margin-bottom: 20PX; margin-right: 20px;">
          <style>
         
         }
