--- a/index.html
+++ b/index.html
@@ -502,6 +502,7 @@
         <a style="color: white;" href="mailto:church@example.com">Email</a> <br>
         <a style="color: white;" href="tel:+1234567890">Phone</a><br>
         <a href="admin.html">Admin Page</a>  <br>
+        <p style="margin-left: 37%">Copyright &#169; 2025 IsraelCA|Designed By <a href="https://webbyfortune.github.io/HyvePixels/the%2
     </footer>
     
     <script>
