--- a/ICAYouth.html
+++ b/ICAYouth.html
@@ -115,7 +115,7 @@
 <body>
     <header>
         <img src="MainLogo.png" alt="Church Logo">
-        <h1>ISRAEL CHURCH OF AFRICA</h1>
+        <h1>ISRAEL CHURCH OF AFRICA (ICA)</h1>
     </header>
     
     <nav>
