--- a/ICAYouth.html
+++ b/ICAYouth.html
@@ -9,7 +9,7 @@
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
         header { display: flex; align-items: center; padding: 20px; }
         header img { width: 50px; height: auto; margin-right: 10px; }
-        h1 { margin: 0; }
+        h1 { margin: 0; color: Red;}
         nav { background: green; padding: 10px; text-align: center; }
         nav ul { list-style: none; padding: 0; }
         nav ul li { display: inline; margin: 0 15px; }
