--- a/index.html
+++ b/index.html
@@ -282,8 +282,6 @@
             <option value="diocese2">Kisumu South </option>
             <option value="diocese3">Kisumu East </option>
             <option value="diocese4">Kisumu West </option>
-            <option value="diocese5">Upper Milambo </option>
-            <option value="diocese6">Lower Milambo</option>
             <option value="diocese7">Siaya </option>
             <option value="diocese8">Rift Valley </option>
             <option value="diocese9">Nairobi </option>
@@ -300,16 +298,14 @@
 
     <script>
         const dioceses = {
-            diocese1: { bishop: "Bishop Onoka", churches: {"Church A1": "Pastor Paul Adams", "Church B1": "Pastor Steve Clark", "Church C1": "Pastor David Lee"} },
-            diocese2: { bishop: "Bishop Miri", churches: {"Church A2": "Pastor James White", "Church B2": "Pastor Mark Taylor", "Church C2": "Pastor Joseph Hall"} },
-            diocese3: { bishop: "Bishop Magoya", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
-            diocese4: { bishop: "Bishop Angugo", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
-            diocese5: { bishop: "Bishop Odongo", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
-            diocese6: { bishop: "Bishop Ariwi", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
-            diocese7: { bishop: "Bishop Alal", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
-            diocese8: { bishop: "Bishop Tanui", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
-            diocese9: { bishop: "Bishop Jabuya", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
-            diocese10: { bishop: "Bishop Twago", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
+            diocese1: { bishop: "Bishop Boaz Onyango", churches: {"Church A1": "Pastor Paul Adams", "Church B1": "Pastor Steve Clark", "Church C1": "Pastor David Lee"} },
+            diocese2: { bishop: "Bishop Huxley Miri", churches: {"Church A2": "Pastor James White", "Church B2": "Pastor Mark Taylor", "Church C2": "Pastor Joseph Hall"} },
+            diocese3: { bishop: "Bishop Charles Magoya", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
+            diocese4: { bishop: "Bishop Hellen Angugo", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
+            diocese7: { bishop: "Bishop Noah Alal", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
+            diocese8: { bishop: "Bishop Joel Tanui", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
+            diocese9: { bishop: "Bishop John Ogola", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
+            diocese10: { bishop: "Bishop John Twago", churches: {"Church A3": "Pastor Peter Wilson", "Church B3": "Pastor Andrew Scott", "Church C3": "Pastor Matthew Johnson"} },
         };
 
         function updateChurches() {
